MASTER sem files updated

--- a/template/assets/css/main.css
+++ b/template/assets/css/main.css
@@ -67,6 +67,7 @@ a {
 	transition: all 0.3s ease-in-out;
 }
 
+
 a:hover {
 	  text-decoration: none !important;
 	  -webkit-transition: all 0.3s ease-in-out;
@@ -74,6 +75,15 @@ a:hover {
 	  -ms-transition: all 0.3s ease-in-out;
 	  -o-transition: all 0.3s ease-in-out;
 	  transition: all 0.3s ease-in-out;
+}
+
+a:visited {
+    text-decoration: none;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 /* The Loader */
